@@ -12,6 +12,7 @@ version = 0.17
 
 [Prereqs]
 Clustericious = 0.9920
+Clustericious::Config = 0.17
 Class::Method::Modifiers = 0
 
 [RemovePrereqs]
